# RayTraceDicom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  beam_settings.cpp  beam_settings.h  config.cpp  config.h  constants.h  cpu_convolution_1d.cpp  cpu_convolution_1d.h  cuda_errchk.cu  cuda_errchk.cuh  cuda_member.cuh  density_and_sp_tracer_params.cu  density_and_sp_tracer_params.cuh  dicom_reader.cpp  dicom_reader.h  energy_reader.cpp  energy_reader.h  energy_struct.h  fill_idd_and_sigma_params.cu  fill_idd_and_sigma_params.cuh  float3_affine_transform.cu  float3_affine_transform.cuh  float3_from_fan_transform.cu  float3_from_fan_transform.cuh  float3_idx_transform.cu  float3_idx_transform.cuh  float3_to_fan_transform.cuh  gpu_convolution_2d.cu  gpu_convolution_2d.cuh  helper_float3.cuh  host_image_3d.cuh  kernel_wrapper.cu  kernel_wrapper.cuh  main.cu  matrix_3x3.cu  matrix_3x3.cuh  tracer_param_struct3.h  (+6 more)
LUTs/: HU_to_SP_H&N_adj.txt  density_Schneider2000_adj.txt  nuclear_weights_and_sigmas_Fluka.txt  nuclear_weights_and_sigmas_Soukup.txt  nuclear_weights_and_sigmas_fit.txt  proton_cumul_ddd_data.txt  radiation_length.txt  radiation_length_inc_water.txt
doc/: .gitignore  CMakeLists.txt  Doxyfile  make_documentation.cmake
src/: CMakeLists.txt  beam_settings.cpp  beam_settings.h  config.cpp  constants.h  cpu_convolution_1d.h  cuda_errchk.cu  cuda_errchk.cuh  density_and_sp_tracer_params.cu  density_and_sp_tracer_params.cuh  dicom_reader.cpp  energy_reader.h  energy_struct.h  fill_idd_and_sigma_params.cu  fill_idd_and_sigma_params.cuh  float3_affine_transform.cu  float3_affine_transform.cuh  float3_from_fan_transform.cuh  float3_idx_transform.cu  float3_idx_transform.cuh  float3_to_fan_transform.cu  float3_to_fan_transform.cuh  gpu_convolution_2d.cu  gpu_convolution_2d.cuh  helper_float3.cu  helper_float3.cuh  host_image_3d.cuh  kernel_wrapper.cu  kernel_wrapper.cuh  main.cu  matrix_3x3.cu  matrix_3x3.cuh  tracer_param_struct3.h  tracer_param_struct_div3.cu  tracer_param_struct_div3.cuh  transfer_param_struct_div3.cu  transfer_param_struct_div3.cuh  vector_find.h
